--- a/webpage/buyagrade.css
+++ b/webpage/buyagrade.css
@@ -1,26 +1,51 @@
-html {
-    background-color: #39275B;
-}
-
 body {
-    width: 600px;
-    margin: 1em auto;
-    background-color: white;
-    border: 10px #D8C858 solid;
-    padding: 0.5em;
+    background: #39275b;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
 }
-
 hr {
     width: 90%;
-    border: 1px solid #D8C858;
+    border: 1px solid #d8c858;
+}
+.container {
+    border: 10px #d8c858 solid;
+    width: 600px;
+    background: #fff;
+    margin: 0 auto;
+    padding: 1em;
 }
 
-h1, h2 {
-    font-family: sans-serif;
+h1,
+h2 {
     text-align: center;
+    margin: 0;
+    padding: 0.5rem;
 }
-
-input[type="submit"] {
-    font-size: 2em;
+.input-container {
+    margin: 10px 0;
+}
+.input-container input:not([type='radio']) {
+    display: block;
+}
+input[type='submit'] {
+    font-size: 1em;
     width: 100%;
+    margin: 10px 0;
+    cursor: pointer;
+}
+input:not([type='radio']) {
+    box-sizing: border-box;
+    outline: 0;
+    border-radius: 4px;
+    border: 1px solid rgb(95, 95, 95);
+    padding: 10px;
+    appearance: none;
+    margin: 0;
+}
+form {
+    background: #fff;
 }
